; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Proto_PPP.c_MsChapV2_GenerateChallenge8.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Proto_PPP.c_MsChapV2_GenerateChallenge8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

@SHA1_SIZE = common dso_local global i32 0, align 4
@MAX_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MsChapV2_GenerateChallenge8(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_5__*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %15 = load i32, i32* @SHA1_SIZE, align 4
  %16 = zext i32 %15 to i64
  %17 = call i8* @llvm.stacksave()
  store i8* %17, i8** %10, align 8
  %18 = alloca i8, i64 %16, align 16
  store i64 %16, i64* %11, align 8
  %19 = load i32, i32* @MAX_SIZE, align 4
  %20 = zext i32 %19 to i64
  %21 = alloca i8, i64 %20, align 16
  store i64 %20, i64* %12, align 8
  %22 = load i32, i32* @MAX_SIZE, align 4
  %23 = zext i32 %22 to i64
  %24 = alloca i8, i64 %23, align 16
  store i64 %23, i64* %13, align 8
  %25 = load i8*, i8** %5, align 8
  %26 = icmp eq i8* %25, null
  br i1 %26, label %33, label %27

27:                                               ; preds = %4
  %28 = load i8*, i8** %6, align 8
  %29 = icmp eq i8* %28, null
  br i1 %29, label %33, label %30

30:                                               ; preds = %27
  %31 = load i8*, i8** %7, align 8
  %32 = icmp eq i8* %31, null
  br i1 %32, label %33, label %34

33:                                               ; preds = %30, %27, %4
  store i32 1, i32* %14, align 4
  br label %64

34:                                               ; preds = %30
  %35 = call %struct.TYPE_5__* (...) @NewBuf()
  store %struct.TYPE_5__* %35, %struct.TYPE_5__** %9, align 8
  %36 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %37 = load i8*, i8** %6, align 8
  %38 = call i32 @WriteBuf(%struct.TYPE_5__* %36, i8* %37, i32 16)
  %39 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %40 = load i8*, i8** %7, align 8
  %41 = call i32 @WriteBuf(%struct.TYPE_5__* %39, i8* %40, i32 16)
  %42 = load i8*, i8** %8, align 8
  %43 = trunc i64 %20 to i32
  %44 = trunc i64 %23 to i32
  %45 = call i32 @ParseNtUsername(i8* %42, i8* %21, i32 %43, i8* %24, i32 %44, i32 1)
  %46 = call i32 @IsEmptyStr(i8* %21)
  %47 = icmp eq i32 %46, 0
  br i1 %47, label %48, label %52

48:                                               ; preds = %34
  %49 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %50 = call i32 @StrLen(i8* %21)
  %51 = call i32 @WriteBuf(%struct.TYPE_5__* %49, i8* %21, i32 %50)
  br label %52

52:                                               ; preds = %48, %34
  %53 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %54 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %53, i32 0, i32 1
  %55 = load i32, i32* %54, align 4
  %56 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %57 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %56, i32 0, i32 0
  %58 = load i32, i32* %57, align 4
  %59 = call i32 @Sha1(i8* %18, i32 %55, i32 %58)
  %60 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %61 = call i32 @FreeBuf(%struct.TYPE_5__* %60)
  %62 = load i8*, i8** %5, align 8
  %63 = call i32 @Copy(i8* %62, i8* %18, i32 8)
  store i32 0, i32* %14, align 4
  br label %64

64:                                               ; preds = %52, %33
  %65 = load i8*, i8** %10, align 8
  call void @llvm.stackrestore(i8* %65)
  %66 = load i32, i32* %14, align 4
  switch i32 %66, label %68 [
    i32 0, label %67
    i32 1, label %67
  ]

67:                                               ; preds = %64, %64
  ret void

68:                                               ; preds = %64
  unreachable
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local %struct.TYPE_5__* @NewBuf(...) #2

declare dso_local i32 @WriteBuf(%struct.TYPE_5__*, i8*, i32) #2

declare dso_local i32 @ParseNtUsername(i8*, i8*, i32, i8*, i32, i32) #2

declare dso_local i32 @IsEmptyStr(i8*) #2

declare dso_local i32 @StrLen(i8*) #2

declare dso_local i32 @Sha1(i8*, i32, i32) #2

declare dso_local i32 @FreeBuf(%struct.TYPE_5__*) #2

declare dso_local i32 @Copy(i8*, i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
